assets/css/style.css
/*--- imports  ---*/
@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One|Raleway:500,700&display=swap');
/* palette consists of: #34233a, #e9f5d9, #fff7ef, #db8e6b, #c15b5c */

.navbar .icon-reorder{
    font-size: 2rem;
    display: none;
}

/*--- Colours & Fonts ---*/

.title,
.subtitle,
.navmenu-item a div,
.article-new div h3,
.article-old div h5,
.timeline-title{
    font-family: 'Julius Sans One', sans-serif;
    font-weight:bold;
}

.navbar{
    background-color: #c15b5c;
}

#navmenu{
    background-color: inherit;
}

.navbar .navbar-logo{
    font-family: 'Julius Sans One', sans-serif;
    font-weight: bolder;
    font-size: 1.4rem;
    color: #fff7ef!important;
    text-decoration: none;
}

.navmenu-item a div{
    color: #fff7ef;
    background-color: #c15b5c;
    font-family: 'Julius Sans One', sans-serif;
    transition-duration: 0.3s;
}

.navmenu-item a:hover{
    text-decoration: none;
}

.navmenu-item a div:hover{
    background-color: #f08a5b;
}

.shoe{
    color: #fff7ef;
    background-color: #34233a;
}

.footer-liner{
    color: #fff7ef;
    background-color: #34233a;
}

.footer-liner .partner-logos{
    color: #fff7ef;
    background-color: #34233a;
}

.footer-liner .copyright-info{
    color: #fff7ef;
    background-color: #34233a;
}

.article-new div h3,.old-art-title{
    color: #fff7ef;
}

.old-art-title:hover,
.old-art-para:hover,
.old-art-para,
.article-new div p
{
    color: #fff7ef;
}

.article-new div div, .article-old div div{
    color: #c15b5c;
}

.article-new div:hover div, .article-old div:hover div{
    color: #f08a5b;
}
.btn{
    background-color:#34233a;
    border-color:#34233a;
    color:#fff7ef;
}
.btn:hover{
    background-color:#f08a5b;
    border-color:#e99771;
    color:#fff7ef;
}

/*---  Header - Navbar  ---*/
.navbar{
    width: 100%;
    padding: 0 30px;
    margin: 0 0 0 0;
    height: 50px;
    position: fixed;
    z-index: 16;
}

#navmenu{
    width: 50%;
    padding: 0;
}

.navmenu-list{
    display: inline-table;
    float: right;
    margin-bottom: 0;
    height: 50px;
}

.navmenu-item{
    display: table-cell;
    height: 100%;
    vertical-align: middle;
}

.navmenu-item a div{
    text-align: center;
    line-height: 24px;
    padding: .8rem 0;
    width: 6rem;
}

/*--- page ---*/
#Top{
    padding-top:50px;
}

#Landing-Splash,
#Articles,
#About,
#Timeline,
#Contact
{
    margin: 30px 0;
    padding: 0 30px;
    overflow: hidden;
}

#Articles .title,
#About .title,
#Timeline .title,
#Contact .title{
    margin-top:50px;
}

.container-fluid{
    padding: 0;
}

.row{
    margin: 0;
}

html, body{
    min-height: 100%;
}

.title{
    width: 100%;
    position: relative;
    text-align: center;
    top: -0.3rem;
    padding-bottom: 30px;
}

hr{
    max-width: 30%;
}

/*--- Landing ---*/

.carousel-item{
    height: 500px;
}
.carousel-item img{
    object-fit: cover;
}

/*--- articles ---*/

.new-container{
    padding: 0 15px 0 0;
    margin-bottom: 10px;
}

.main-art-link:hover{
    text-decoration: none;
}

.article-new{
    background: linear-gradient( rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../images/brewery.jpg);
    background-position: center;
    width: 100%;
    height: 100%;
    min-height: 150px;
}

.article-new div{
    margin: 5px;
    position: absolute;
    bottom: 0;
    padding: 5px;
}

.article-new div h3, .article-new div p, .article-new div div{
    position: relative;
    margin: 0 0 0 0;
    padding: 0;
}

.old-container{
    padding-right: 0;
    margin-bottom: 10px;
    max-height: 400px;
    overflow-y: auto;
}

.old-art-para, 
.old-art-title{
    margin:0;
    padding-bottom:0!important;
}

.old-art-para{
    min-height:82px;
}

.article-new div div, .article-old div div{
    padding-top:0;
}

.article-old{
    float: left;
    height: 150px;
    width: 100%;
    margin-bottom: 10px;
}

.article-old div *{
    padding: 5px;
}

.article-image1{
    background: linear-gradient( rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../images/potion-bottles.jpg);
    background-size: cover;
    background-position: center;
}
.article-image2{
    background: linear-gradient( rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../images/workshop-potion.jpg);
    background-size: cover;
    background-position: center;
}
.article-image3{
    background: linear-gradient( rgba(0,0,0,.5),rgba(0,0,0,.5)), url(../images/Alulu_Beer_Receipt.jpg);
    background-size: cover;
    background-position: center;
}
.article-old a{
    text-decoration: none;
}
/*--- about ---*/

.subtitle{
    text-align:center;
    padding-bottom:30px;
}

.aims{
    margin: 0 15%;
}

.goal-image{
    max-width: 535px;
    max-height: 420px;
}

/*--- timeline ---*/

.timeline-dot{
    position: absolute;
    width: 1vw;
    height: 1vw;
    border: 1px solid;
    border-radius: 50%;
    overflow: hidden;
    background-color: #d6d1cc
}

.tl-img-1,.tl-img-2,.tl-img-3,.tl-img-4{
    background-image: url(../images/alchemists.jpg);
}

.timeline-item-left img, .timeline-item-right img{
    background-position: center;
}

.timeline-item-left, .timeline-item-right{
    padding:10px 0;
}

.tli,
#Timeline div img{
    max-width:48.7%;
    flex: 0 0 48.7%;
}

.timeline-item-left{
    text-align: right;
}

.vertical-rule{
    max-width:1px;
    border-left: 1px solid #34233a;
    padding:0;
    margin:0 10px -30px 10px;
}
/*---- contact ---*/
#Contact{
    padding-bottom: 33px;
}

#Contact form{
    width:100%;
}

#Name, #Email, #Message{
    margin-bottom: 10px;
}

/*---- footer ----*/

.shoe{
    position: relative;
    margin: 0px;
    bottom: 0px;
    padding: 1.5rem;
    width: 100%;
    left: 0;
}

.footer-liner h5{
    display: block;
    font-family: 'Julius Sans One', sans-serif;
}

.copyright-info{
    text-align: right;
}

/*--- mobile rules ---*/
@media(max-width: 991px)
{
    /*header*/
    .navbar{
        height: 50px;
    }

    #navmenu{
        display: none;
        overflow: hidden;
    }

    .navbar-logo{
        position: relative;
    }

    .navmenu-list{
        background-color: #e99771;
        position: fixed;
        margin-top: 1.55rem;
        left: 0;
        padding: 0;
        width: 100vw;
        height: auto;
    }

    .navmenu-item{
        display: block;
        text-align: center;
    }

    .navbar .icon-reorder{
        display: block;
        overflow: hidden;
        float: right;
        color: #fff7ef;
        text-decoration: none;
    }
    .navmenu-item a div{
        background-color: #e99771;
        width: 100%;
    }
    /*landing*/
    #Landing-Splash{
        min-height: 33vh;
    }

    /*articles*/
    .old-container, .new-container{
        padding:0;
        margin:0 0 10px;
        max-height:none;
    }
    /*timeline*/
    .vertical-rule{
        margin:0 8px -30px 8px;
    }

}

@media(max-width: 767px)
{
    /*timeline*/
    .vertical-rule, .timeline-dot, #Timeline div img{
        display:none;
    }
    .old-container, .new-container{
        font-size:smaller;
    }
    .article-new{
        font-size:1.25rem;
    }
}

